--- a/FiscaliZi.Colinfo/Resources/Dictionaries/dicDatagrid.xaml
+++ b/FiscaliZi.Colinfo/Resources/Dictionaries/dicDatagrid.xaml
@@ -69,6 +69,42 @@
         </Style.Triggers>
     </Style>
 
+    <Style x:Key="DatagridCell_Ocorrencia" TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource DatagridCell_DetalhePedido}">
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type DataGridCell}">
+                    <Border BorderBrush="{DynamicResource AccentColorBrush}"
+                            BorderThickness="2" 
+                            SnapsToDevicePixels="True" 
+                            CornerRadius="6" 
+                            Height="Auto" Width="30">
+                        <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                          Margin="0"
+                                          HorizontalAlignment="Center"
+                                          VerticalAlignment="Center"/>
+                        <Border.Style>
+                            <Style TargetType="{x:Type Border}">
+                                <Style.Triggers>
+                                    <DataTrigger Binding="{Binding Ocorrencia}" Value="004">
+                                        <Setter Property="Background" Value="DeepSkyBlue"/>
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Border.Style>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding Ocorrencia}" Value="004">
+                <Setter Property="Foreground" Value="{DynamicResource AccentColorBrush}"/>
+                <Setter Property="FontWeight" Value="Bold"/>
+                <Setter Property="FontSize" Value="8.5"/>
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+
     <Style x:Key="DatagridCellCustomMDesign_CellCenter_DP" TargetType="{x:Type DataGridCell}" BasedOn="{StaticResource DatagridCell_DetalhePedido}">
         <Setter Property="Template">
             <Setter.Value>
@@ -118,6 +154,5 @@
     <Style x:Key="DataGridColumnHeader_DetalhePedido" TargetType="{x:Type DataGridColumnHeader}" BasedOn="{StaticResource CustomMaterialDesignDataGridColumnHeader}">
         <Setter Property="Foreground" Value="{DynamicResource IdealForegroundColorBrush}" />
     </Style>
-
 
 </ResourceDictionary>
