--- a/FiscaliZi.Colinfo/Resources/Dictionaries/dicListBox.xaml
+++ b/FiscaliZi.Colinfo/Resources/Dictionaries/dicListBox.xaml
@@ -87,7 +87,7 @@
     <Style x:Key="ListBoxItem_Vendas" TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource MaterialDesignCardsListBoxItem}">
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="Padding" Value="0"/>
-        <Setter Property="Margin" Value="0 0 8 8"></Setter>
+        <Setter Property="Margin" Value="3,2,2,2"></Setter>
         <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
         <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
         <Setter Property="Background" Value="White"/>
@@ -99,9 +99,11 @@
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
                     <MDesign:Card Content="{TemplateBinding Content}"
                                   MDesign:ShadowAssist.ShadowDepth="Depth1"
-                              ContentTemplate="{TemplateBinding ContentTemplate}"
-                              ContentStringFormat="{TemplateBinding ContentStringFormat}"
-                              ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}"/>
+                                  ContentTemplate="{TemplateBinding ContentTemplate}"
+                                  ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                  ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}"
+                                  >
+                    </MDesign:Card>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
