--- a/FiscaliZi.Colinfo/Assets/MainView.xaml
+++ b/FiscaliZi.Colinfo/Assets/MainView.xaml
@@ -48,10 +48,12 @@
                 <TabItem Header="OPÇÕES">
                 <dragablz:TabablzControl FixedHeaderCount="2"  >
                         <TabItem Header="Produtos">
-                            <Assets:ConfigView cal:View.Model="{Binding ConfigVM}" Margin="8"/>
+                            <Assets:ConfigProdutosView cal:View.Model="{Binding ConfigVM}" Margin="8"/>
                         </TabItem>
-                    <TabItem Header="Tab 2"/>
-                </dragablz:TabablzControl>
+                        <TabItem Header="Clientes">
+                            <Assets:ConfigClientesView cal:View.Model="{Binding ConfigClientesVM}" Margin="8"/>
+                        </TabItem>
+                    </dragablz:TabablzControl>
             </TabItem>
         </dragablz:TabablzControl>
     </dockablz:Layout>
