--- a/FiscaliZi.Colinfo/Resources/Dictionaries/dicDatagrid.xaml
+++ b/FiscaliZi.Colinfo/Resources/Dictionaries/dicDatagrid.xaml
@@ -53,7 +53,8 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type DataGridCell}">
                     <Border BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}" 
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            Background="{TemplateBinding Background}" 
                             SnapsToDevicePixels="True">
                         <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                                           Margin="{TemplateBinding Padding}"/>
@@ -64,6 +65,7 @@
         <Style.Triggers>
             <Trigger Property="IsSelected" Value="True">
                 <Setter Property="Background" Value="{x:Null}" />
+                <Setter Property="BorderBrush" Value="{x:Null}"/>
                 <Setter Property="Foreground" Value="{DynamicResource AccentSelectedColorBrush}"/>
             </Trigger>
         </Style.Triggers>
